--- a/BCD/Base.lproj/Main.storyboard
+++ b/BCD/Base.lproj/Main.storyboard
@@ -8,6 +8,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -310,11 +311,14 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="5Ou-hn-z2Q">
-                        <barButtonItem key="rightBarButtonItem" image="ic_file_download" id="0oG-Vt-gM6">
-                            <connections>
-                                <action selector="downloadButtonTapped:" destination="J1l-gt-L0q" id="MLX-AS-MC9"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem image="ic_file_download" id="0oG-Vt-gM6">
+                                <connections>
+                                    <action selector="downloadButtonTapped:" destination="J1l-gt-L0q" id="MLX-AS-MC9"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem image="ic_blockAd" id="YmM-GZ-JyQ"/>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="authorLabel" destination="odB-KX-ctA" id="jVD-uh-FZZ"/>
@@ -327,7 +331,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wQy-dF-3Wm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1662" y="36"/>
+            <point key="canvasLocation" x="1661.25" y="35.91549295774648"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="ueF-gf-9ae">
@@ -806,6 +810,7 @@
     <resources>
         <image name="bonuo-pro" width="580" height="580"/>
         <image name="ic_backspace" width="24" height="24"/>
+        <image name="ic_blockAd" width="24" height="24"/>
         <image name="ic_file_download" width="24" height="24"/>
         <image name="ic_menu" width="24" height="24"/>
         <image name="ic_search" width="24" height="24"/>
